@@ -1,5 +1,10 @@
 2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* libgnat/Makefile.am, wrapup/Makefile.am: Another attempt at the
+	automake variables.
+
+2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* rtems/Makefile.am, rtems/include/rtems/rtems/tasks.h,
 	rtems/src/tasks.c, rtems/src/taskvariableadd.c,
 	rtems/src/taskvariabledelete.c: Add test code for task variables to
